force-app/main/default/objects/User/fields/ByPass_BO_Callout__c.field-meta.xml
<CustomField>
    <fullName>ByPass_BO_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass BO Callout</label>
    <type>Checkbox</type>
</CustomField>