force-app/main/default/objects/User/fields/ByPassFlow__c.field-meta.xml
<CustomField>
    <fullName>ByPassFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassFlow</label>
    <type>Checkbox</type>
</CustomField>