force-app/main/default/objects/User/fields/BypassMerchantAfterSaveFlow__c.field-meta.xml
<CustomField>
    <fullName>BypassMerchantAfterSaveFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To use when updating manager on users</inlineHelpText>
    <label>Bypass Merchant After Save Flow</label>
    <type>Checkbox</type>
</CustomField>