force-app/main/default/objects/User/fields/ByPassTriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>ByPassTriggerHandler__c</fullName>
    <label>ByPassTriggerHandler</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AccountTriggerHandler</fullName>
            </value>
            <value>
                <fullName>UserTriggerHandler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>