force-app/main/default/objects/User/fields/ByPassWorkflow__c.field-meta.xml
<CustomField>
    <fullName>ByPassWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassWorkflow</label>
    <type>Checkbox</type>
</CustomField>