force-app/main/default/objects/User/fields/Current_Number_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Current_Number_of_Open_Cases__c</fullName>
    <label>Current Number of Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>