force-app/main/default/objects/User/fields/Macro_Team__c.field-meta.xml
<CustomField>
    <fullName>Macro_Team__c</fullName>
    <label>Macro_Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asian Supply</fullName>
            </value>
            <value>
                <fullName>E.U. Supply</fullName>
            </value>
            <value>
                <fullName>U.S. Supply</fullName>
            </value>
            <value>
                <fullName>Global Distributors</fullName>
            </value>
            <value>
                <fullName>Cross-Border Supply</fullName>
            </value>
            <value>
                <fullName>Category Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NewBiz Development</fullName>
            </value>
            <value>
                <fullName>BM4B</fullName>
            </value>
            <value>
                <fullName>E.U. &amp; U.S. Back Watch</fullName>
                <isActive>false</isActive>
                <label>E.U. &amp; U.S. Back Watch</label>
            </value>
            <value>
                <fullName>E.U. Onboarding</fullName>
                <isActive>false</isActive>
                <label>E.U. Onboarding</label>
            </value>
            <value>
                <fullName>E.U. Other Diversification</fullName>
                <isActive>false</isActive>
                <label>E.U. Other Diversification</label>
            </value>
            <value>
                <fullName>E.U. Smartphone &amp; Core Electronics</fullName>
                <isActive>false</isActive>
                <label>E.U. Smartphone &amp; Core Electronics</label>
            </value>
            <value>
                <fullName>Global Accounts</fullName>
                <isActive>false</isActive>
                <label>Global Accounts</label>
            </value>
            <value>
                <fullName>Strategic Partnership, B&amp;R &amp; Growth</fullName>
                <isActive>false</isActive>
                <label>Strategic Partnership, B&amp;R &amp; Growth</label>
            </value>
            <value>
                <fullName>Supply Operations</fullName>
                <isActive>false</isActive>
                <label>Supply Operations</label>
            </value>
            <value>
                <fullName>U.S. Supply, Mana &amp; BM4B</fullName>
                <isActive>false</isActive>
                <label>U.S. Supply, Mana &amp; BM4B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>