force-app/main/default/objects/User/fields/Main_zone__c.field-meta.xml
<CustomField>
    <fullName>Main_zone__c</fullName>
    <label>Main zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>DE-AT</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>