force-app/main/default/objects/User/fields/Spoken_languages__c.field-meta.xml
<CustomField>
    <fullName>Spoken_languages__c</fullName>
    <label>Spoken languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Available_languages_to_speak_in</valueSetName>
    </valueSet>
</CustomField>