force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <defaultValue>&quot;Other&quot;</defaultValue>
    <label>Team</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>