force-app/main/default/objects/User/fields/Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Email__c</fullName>
    <formula>CASE( Team__c , 
					 &apos;SSM Back Watch U.S.&apos;, &apos;sam@backmarket.com&apos;, 
					 &apos;SSM Back Watch E.U.&apos;, &apos;backwatch@backmarket.com&apos;,
					 &apos;SSM Selfcare E.U.&apos;, &apos;selfcare@backmarket.com&apos;,
      Email 					 
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Email</label>
    <type>Text</type>
</CustomField>