force-app/main/default/objects/User/fields/User_OOO__c.field-meta.xml
<CustomField>
    <fullName>User_OOO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please use this field if you want to exclude user from the Round Robin case assignment.</inlineHelpText>
    <label>User OOO</label>
    <type>Checkbox</type>
</CustomField>