force-app/main/default/objects/User/listViews/No_Manager_or_Team.listView-meta.xml
<ListView>
    <fullName>No_Manager_or_Team</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MANAGER</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Customer Community Login User</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>No Manager or Team</label>
    <language>en_US</language>
    <sharedTo>
        <group>Salesforce_Team</group>
    </sharedTo>
</ListView>